 - model metadata for assimp/obj can now define pieces hierarchy
   by either nested tables or 'parent' key.
 - IME editing support for those with the proper SDL2 version/IME tool combination
 ! Made lockluaui.txt obsolete: no longer necessary for it to exists in order to enable VFS for LuaUI
 - use SHA2 content hashes rather than CRC32

Fixes:
 - fix #6059 (units with high turnRate/brakeRate/acceleration moving unexpectedly)
 - fix #4268 (add Spring.AddObjectDecal)
 - fix #4755 (wrong usage of addr2line on FreeBSD)
 - fix #4945 (add Spring.GetMapStartPositions)
 - fix #4724 (Spring.SetUnitNeutral not informing any attackers)
 - fix #5864 (gunships not limited by maxVelocity when climbing)
 - fix #4515 (aircraft jitter when moving and turning)
 - fix #6048 (falling features shaking on the ground instead of fully stopping)
 - fix #6046 #5326 #5222 #4663 (false camera movement if entering MMB mode while moving cursor)
 - fix #6019 (Spring.IsAABBInView bug)
 - fix #6038 (noExplode weapons not obeying SetUnitWeaponState("range"))
 - fix #6036 (no method to detect MMB camera-pan mode)
 - fix #5956 (inverted mouse camera panning for Windows 10 Pro users)
 - fix #6022 (uniformArray not initializing array-uniforms in gl.CreateShader)
 - fix #6012 (air-transports not unloading properly)
 - fix #6010 (HoverAirMoveType aircraft ignoring smooth-mesh when idle)
 - fix #6009 (aircraft landing on damage-dealing water when idle)
 - fix #6007 / #5989 (desyncs on CMD_UNLOAD_UNITS)
 - fix #5993 (voidwater triggering water explosion effects)
 - fix #5247 (maximized minimap producing graphical glitches)
 - fix #5962 (minimap viewport rectangle larger than what actual screen shows)
 - fix #5965
 - fix #5977 (log-system memory corruption)
 - fix #5964 (shields occasionally letting projectiles pass)
 - fix #5948 (memory corruption with LoadingMT=1)
 - fix #5947 (PFS failure if starting square inside concave corner)
 - fix #5934 (crash on malformed build-commands)